[package]
name = "minreq-async"
version = "2.13.1"
edition = "2024"
description = "async version of https://github.com/neonmoe/minreq"
license = "MIT"
[lib]
name = "minreq"
path = "src/lib.rs"

[dependencies]
urlencoding = { version = "2.1.3" }
base64 = { version = "0.22.1" , optional = true}
once_cell = { version = "1.14.0" }
webpki-roots = "0.26.7"
log = { version = "0.4.0" }
rustls-webpki = "0.102.8"
tokio = { version = "^1", default-features = false, features = ["rt", "net", "io-util", "fs"] }
anyhow = "1.0.95"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
rustls = { version = "^0.23", default-features = false, features = ["ring", "std"]}
futures = "0.3.31"
[[example]]
name = "download"
path = "./src/download.rs"

[dev-dependencies]
indicatif = "0.17.11"
env_logger = "0.11.6"
chrono = "0.4.39"

[features]
default = []
proxy = ["base64"]
https = []

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
panic = "abort"
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = "z"
panic = "abort"
